<resources>
    <string name="app_name">Cats</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="id">id</string>
    <string name="cancel">CANCEL</string>
    <string name="add_edit">ADD/EDIT</string>
</resources>
